tests/analysis/good/tiny.pepa
% This should pass type checking because the rate r1
% is never used as a rate and hence can justifiably
% be said to be a probability or scalar.

r1 = 1.0;
r2 = 2.0;
r3 = 3.0;

P1 = (a, r2 * r1).P2 ;
P2 = (a, r2).P3 ;
P3 = (a, r3).P1 ;
P4 = (a, r2).P2 ;

( P1 <> P1 <> P4 )
